# Gitserver

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.gitserver  Dockerfile.ssh  README.md  build_containers.sh  docker-compose.yml  gitserver.go  go.mod  go.sum
html/: index.html  lib.js  react_stuff.js
html-client/: package.json
html-client/public/: index.html
html-client/src/: App.css  App.js  CommitsContainer.js  DiffsContainer.js  DirListing.js  FileView.js  FileViewContainer.js  ListPlaceholder.js  RepoContainer.js  RepoPopover.js  Topbar.js  atom-one-dark.css  atom-one-light.css  index.css  index.js  setupProxy.js  theme.css  topbar.js  util.js
html-client/src/redux/: actions.js  store.js
src/: main.rs
