[package]
name = "gitserver"
version = "0.1.0"
authors = ["Maarten de Jonge <mdejonge1990@gmail.com>"]

[dependencies]
iron = "0.6.*"
router = "*"
url = "1.7.*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lazy_static = "1.2.0"
params = "0.8.*"
failure = "0.1.*"
hex = "0.3.2"

[dependencies.git2]
version = "0.7"
default-features = false
features = []
